--- a/packages/theme-chalk/src/messageBox.scss
+++ b/packages/theme-chalk/src/messageBox.scss
@@ -2,69 +2,68 @@
 @use './mixins/public' as *;
 
 @include b(message-box) {
-  width: 617px;
+  width: 360px;
   height: auto;
-  background: linear-gradient(
-    180deg,
-    #3d4962 0%,
-    #454f63 19%,
-    #3b4252 49%,
-    #49515f 80%,
-    #4a5363 100%
-  );
-  border: 1px solid #ffffff;
-  border-radius: 25px;
-  padding: 0 19px;
+  background: #1d1e21;
+  box-shadow: 0px 0px 10px 0px rgba(14, 14, 14, 0.3);
+  border-radius: 8px;
+  padding: 20px;
   box-sizing: border-box;
-  font-size: 18px;
-  color: #ffffff;
-
-  @include e(header) {
-    height: 44px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border-bottom: 1px solid rgba(255, 255, 255, .5);
-
-    i {
-      cursor: pointer;
-      font-size: 20px;
-    }
-  }
 
   @include e(body) {
-    min-height: 140px;
     display: flex;
-    align-items: center;
-    justify-content: center;
     white-space: normal;
+    justify-content: flex-start;
+
+    .body-left {
+      color: #ffffff;
+      opacity: 0.16;
+      font-size: 24px;
+      margin-right: 12px;
+    }
+
+    .body-right {
+      flex: 1;
+      font-size: 14px;
+      color: #ffffff;
+      line-height: 22px;
+      flex-wrap: wrap;
+    }
   }
 
   @include e(footer) {
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: center;
-    padding-bottom: 20px;
+    margin-top: 33px;
 
     @include e(btn) {
-      width: 118px;
-      height: 35px;
-      background: #ff8002;
-      opacity: 0.7;
-      border-radius: 17px;
-      font-size: 16px;
-      text-align: center;
-      line-height: 35px;
-      cursor: pointer;
+      width: 64px;
+      height: 32px;
+      background: rgba(255, 255, 255, 0.08);
+      border-radius: 4px;
+      border: none;
       outline: none;
-      border: 0;
+      cursor: pointer;
+      text-align: center;
+      line-height: 32px;
       color: #ffffff;
+      font-size: 12px;
+      margin-left: 12px;
     }
 
-    .cancel {
-      border: 1px solid #ffffff;
-      background: transparent;
-      margin-left: 59px;
+    .danger-sure {
+      background: rgba(11, 113, 230, 1);
+    }
+
+    .delete-sure {
+      background: rgba(255, 255, 255, 0.08);
+      color: #ff4d4f;
+    }
+
+    .delete-cancel {
+      background: rgba(255, 255, 255, 0.08);
+      color: #ffffff;
     }
   }
 }
