--- a/packages/theme-chalk/src/dialog.scss
+++ b/packages/theme-chalk/src/dialog.scss
@@ -16,6 +16,8 @@
     box-sizing: border-box;
     color: #ffffff;
     font-size: 16px;
+    background: #2D2F33;
+    border-radius: 8px 8px 0 0;
 
     i {
       font-size: 20px;
@@ -45,6 +47,10 @@
       margin-right: 12px;
       border: none;
       outline: none;
+
+      &:last-child {
+        margin-right: 0;
+      }
     }
 
     .cancel {
