--- a/story/src/views/Icon/index.scss
+++ b/story/src/views/Icon/index.scss
@@ -1,4 +1,4 @@
-@import 'story/assets/css/var.scss';
+@import '@/assets/css/var.scss';
 
 .icon-demo {
   h2 {
@@ -31,7 +31,6 @@
   }
 
   ul {
-    margin: 0 3.5%;
     margin-top: 50px;
   }
 
